# CampusTask

./: CHANGELOG.md  README.md  USER_GUIDE.md  ai_harness.py  eval_cases.json  main.py  pyproject.toml  task_model.py  task_service.py  task_storage.py  tasks.csv  tasks.json  trace.jsonl
.github/workflows/: test.yml
campus_task/: cli.py
tests/: test_ai_harness.py  test_lab7_storage.py  test_task_service.py
